tests/algorithms/x/CS/data_structures/binary_tree/treap.error
exit status 1
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/Program.cs(168,65): error CS1501: No overload for method 'Split' takes 1 arguments [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/Program.cs(169,49): error CS1061: 'string[]' does not contain a definition for 'right' and no accessible extension method 'right' accepting a first argument of type 'string[]' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/Program.cs(170,49): error CS1061: 'string[]' does not contain a definition for 'left' and no accessible extension method 'left' accepting a first argument of type 'string[]' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/Program.cs(172,63): error CS1501: No overload for method 'Split' takes 1 arguments [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/Program.cs(173,47): error CS1061: 'string[]' does not contain a definition for 'left' and no accessible extension method 'left' accepting a first argument of type 'string[]' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/Program.cs(174,62): error CS1061: 'string[]' does not contain a definition for 'right' and no accessible extension method 'right' accepting a first argument of type 'string[]' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3596605283/001/app.csproj]

The build failed. Fix the build errors and run again.